--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      -name: Setup Node
        uses: actions/setup-node@v3
        with:
           node-version: "18"
